# HyperJet

./: .appveyor.yml  .clang-format  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  pytest.ini  repair.sh  requirements.txt  setup.py  solver  test.py
.github/workflows/: build-pypi.yml  ci.yml  publish.yml  pythonpackage.yml  pythonpublish.yml  test-cpp.yml  test-python.yml  wheels.yml
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
docs/: README.md  _sidebar.md  example.ipynb  how-does-it-work.md  index.html  quickstart.md  styles.css
external_libraries/autodiff/common/: eigen.hpp
external_libraries/autodiff/forward/dual/: dual.hpp
include/: HyperJet.h  Jet.h  hyperjet.h  sparse_lu.h
include/HyperJet/: HyperJet.h  Jet.h
include/hyperjet/: HyperJet.h  Jet.h  eigen.h  hyperjet.h
include/hyperjet/detail/: eigen.h  fwd.h  hyperjet.h  jet.h  space.h
python/: CMakeLists.txt
python/src/: bind_ddscalar_0d.cpp  bind_ddscalar_10d.cpp  bind_ddscalar_11d.cpp  bind_ddscalar_12d.cpp  bind_ddscalar_13d.cpp  bind_ddscalar_14d.cpp  bind_ddscalar_15d.cpp  bind_ddscalar_16d.cpp  bind_ddscalar_1d.cpp  bind_ddscalar_2d.cpp  bind_ddscalar_3d.cpp  bind_ddscalar_4d.cpp  bind_ddscalar_5d.cpp  bind_ddscalar_6d.cpp  bind_ddscalar_7d.cpp  bind_ddscalar_8d.cpp  bind_ddscalar_9d.cpp  bind_ddscalar_xd.cpp  bind_sscalar.cpp  common.h  main.cpp
python/tests/: test_SScalar.py
src/: Module.cc  Module.cpp  benchmarks.cpp  python_module.cpp  tests.cpp
src/benchmark/: benchmarks copy.cpp  benchmarks.cpp
src/python/: bind_ddscalar.cpp  bind_ddscalar_0d.cpp  bind_ddscalar_10d.cpp  bind_ddscalar_11d.cpp  bind_ddscalar_12d.cpp  bind_ddscalar_13d.cpp  bind_ddscalar_14d.cpp  bind_ddscalar_15d.cpp  bind_ddscalar_16d.cpp  bind_ddscalar_1d.cpp  bind_ddscalar_2d.cpp  bind_ddscalar_3d.cpp  bind_ddscalar_4d.cpp  bind_ddscalar_5d.cpp  bind_ddscalar_6d.cpp  bind_ddscalar_7d.cpp  bind_ddscalar_8d.cpp  bind_ddscalar_9d.cpp  bind_ddscalar_xd.cpp  bind_sscalar.cpp  common.h  main.cpp  python_module.cpp
src/test/: tests.cpp
test/: CMakeLists.txt
test/src/: test.cpp
tests/: test_DDScalar.py  test_hyperjet.py  test_jet.py
tools/: repair-wheel.sh
